# Mortgage-calculator

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/api/: filters.py  repositories.py  serializers.py  views.py
backend/config/: routers.py  settings.py
backend/offers/: admin.py  apps.py  models.py
backend/offers/migrations/: 0001_initial.py
backend/static/: staticfiles.json
backend/tests/: test_mortgage_calculator.py  test_rest.py
